Fix-table_th_align

--- a/develop_requirement_proj/static/css/drs.css
+++ b/develop_requirement_proj/static/css/drs.css
@@ -304,7 +304,7 @@
 
 
 /* filter Control */
-    tr th:nth-child(2),tr th:nth-child(3){
+    tr th{
         text-align: left !important;
     }
     .filter-control input,.filter-control select{
